--- a/index.html
+++ b/index.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happy Birthday Urvashi!</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      text-align: center;
-      background-color: #fff0f5;
       margin: 0;
       padding: 0;
-    }
-
-    #container {
-      position: relative;
-      width: 100%;
-      height: 100vh;
+      background-color: #ffe6f0;
+      font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
     }
 
-    #cake {
-      width: 250px;
-      margin-top: 60px;
-    }
-
-    #message {
-      font-size: 30px;
-      font-weight: bold;
-      color: #d63384;
-      margin-top: 20px;
+    .balloons {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      overflow: hidden;
     }
 
     .balloon {
@@ -36,48 +28,64 @@
       bottom: -100px;
       width: 50px;
       height: 70px;
+      background-color: rgba(255, 192, 203, 0.7);
       border-radius: 50%;
-      background-color: red;
-      animation: rise 6s linear infinite;
-      opacity: 0.8;
+      animation: float 10s infinite ease-in;
     }
 
-    @keyframes rise {
-      0% { transform: translateY(0); opacity: 0; }
-      50% { opacity: 1; }
-      100% { transform: translateY(-120vh); opacity: 0; }
+    @keyframes float {
+      0% {
+        transform: translateY(0) rotate(0deg);
+      }
+      100% {
+        transform: translateY(-120vh) rotate(360deg);
+      }
+    }
+
+    .container {
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    h1 {
+      font-size: 2.5em;
+      color: #e91e63;
+      margin-bottom: 10px;
+    }
+
+    .cake-img {
+      max-width: 250px;
+      margin-top: 20px;
+      border-radius: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
   </style>
 </head>
 <body>
-  <div id="container">
-    <img id="cake" src="https://i.imgur.com/2FcYx6C.png" alt="Birthday Cake">
-    <div id="message">Happy Birthday Urvashi!</div>
+  <div class="balloons" id="balloons"></div>
+
+  <div class="container">
+    <h1>🎉 Happy Birthday Urvashi! 🎉</h1>
+    <img
+      src="https://cdn.pixabay.com/photo/2017/01/10/19/05/cake-1961782_1280.png"
+      alt="Cake"
+      class="cake-img"
+    />
   </div>
 
-  <audio autoplay loop>
-    <source src="https://www2.cs.uic.edu/~i101/SoundFiles/BirthdaySong.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-
   <script>
-    const container = document.getElementById('container');
-    const colors = ['#ff4d4d', '#4d94ff', '#4dff4d', '#ff66cc', '#ffff66'];
+    // Create balloons
+    const colors = ["#f48fb1", "#81d4fa", "#aed581", "#ffd54f", "#ff8a65"];
+    const balloonContainer = document.getElementById("balloons");
 
-    function createBalloon() {
-      const balloon = document.createElement('div');
-      balloon.classList.add('balloon');
-      balloon.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-      balloon.style.left = Math.random() * 100 + 'vw';
-      balloon.style.animationDuration = (Math.random() * 3 + 3) + 's';
-      container.appendChild(balloon);
-
-      balloon.addEventListener('animationend', () => {
-        balloon.remove();
-      });
+    for (let i = 0; i < 50; i++) {
+      const b = document.createElement("div");
+      b.classList.add("balloon");
+      b.style.left = Math.random() * 100 + "vw";
+      b.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+      b.style.animationDuration = 6 + Math.random() * 4 + "s";
+      balloonContainer.appendChild(b);
     }
-
-    setInterval(createBalloon, 500);
   </script>
 </body>
 </html>
