--- a/index.html
+++ b/index.html
@@ -14,28 +14,24 @@
       text-align: center;
     }
 
-    .container {
-      margin-top: 40px;
+    .section {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    #home {
+      display: flex;
     }
 
     h1 {
       font-size: 2.5em;
       color: #e91e63;
-      margin-bottom: 10px;
     }
 
-    .cake-img {
-      width: 250px;
-      border-radius: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
-    }
-
-    .buttons {
-      margin-top: 30px;
-    }
-
-    button {
+    .button-group button, .back-btn {
       padding: 12px 24px;
       margin: 10px;
       font-size: 16px;
@@ -47,20 +43,12 @@
       transition: background 0.3s;
     }
 
-    button:hover {
+    .button-group button:hover, .back-btn:hover {
       background-color: #e91e63;
     }
 
-    #greetingBox {
-      display: none;
-      background: white;
-      color: #333;
-      padding: 20px;
-      border-radius: 15px;
-      width: 80%;
-      max-width: 400px;
-      margin: 30px auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    .cake-img {
+      width: 250px;
     }
 
     .confetti {
@@ -76,63 +64,125 @@
       0% { transform: translateY(0) rotate(0deg); }
       100% { transform: translateY(100vh) rotate(720deg); }
     }
+
+    .card {
+      width: 300px;
+      height: 200px;
+      background: url('https://cdn.pixabay.com/photo/2020/04/17/18/09/panda-5057322_960_720.png') no-repeat center/contain;
+      margin: 0 auto;
+      perspective: 1000px;
+    }
+
+    .card-inner {
+      width: 100%;
+      height: 100%;
+      transition: transform 1s;
+      transform-style: preserve-3d;
+      cursor: pointer;
+    }
+
+    .card.flipped .card-inner {
+      transform: rotateY(180deg);
+    }
+
+    .card-front, .card-back {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      backface-visibility: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 20px;
+    }
+
+    .card-back {
+      background: white;
+      color: #333;
+      transform: rotateY(180deg);
+      padding: 15px;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div id="home" class="section">
     <h1>🎉 Happy Birthday Urvashi! 🎉</h1>
-    <img
-      src="https://cdn.pixabay.com/photo/2017/01/10/19/05/cake-1961782_1280.png"
-      alt="Cake"
-      class="cake-img"
-      id="cake"
-    />
-
-    <div class="buttons">
-      <button onclick="celebrate()">🎉 Celebrate Your Birthday</button>
-      <button onclick="cutCake()">🎂 Cut Your Cake</button>
-      <button onclick="showGreeting()">💌 Read Greeting</button>
-    </div>
-
-    <div id="greetingBox">
-      <p>
-        Happy Birthday Urvashi! 🎂<br />
-        I love you sooo much ❤️<br />
-        May your day be full of smiles, love, and all the cake you can eat!
-      </p>
+    <div class="button-group">
+      <button onclick="startCelebrate()">🎉 Celebrate Your Birthday</button>
+      <button onclick="startCake()">🎂 Cut Your Cake</button>
+      <button onclick="startGreeting()">💌 Read Greeting</button>
     </div>
   </div>
 
-  <!-- 🔊 Background Romantic Music -->
-  <audio autoplay loop>
-    <source src="https://cdn.pixabay.com/download/audio/2023/03/22/audio_bfa5b924b5.mp3?filename=happy-birthday-to-you-piano-version-141120.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+  <div id="celebrate" class="section"></div>
+  <div id="cake" class="section">
+    <img src="https://cdn.pixabay.com/photo/2017/01/10/19/05/cake-1961782_1280.png" id="cake-img" class="cake-img"/>
+  </div>
+
+  <div id="greeting" class="section">
+    <div class="card" onclick="flipCard(this)">
+      <div class="card-inner">
+        <div class="card-front"></div>
+        <div class="card-back">
+          <p>Happy Birthday Urvashi! 🎂<br>I love you sooo much ❤️<br>May your day be full of smiles, love, and cake!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <button class="back-btn" id="backBtn" style="display:none;" onclick="goBack()">🔙 Back</button>
+
+  <audio id="romanticMusic" src="https://cdn.pixabay.com/download/audio/2023/03/22/audio_bfa5b924b5.mp3?filename=happy-birthday-to-you-piano-version-141120.mp3" loop></audio>
+  <audio id="birthdaySong" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2f1f30930f.mp3?filename=happy-birthday-110354.mp3"></audio>
 
   <script>
-    function celebrate() {
+    function showSection(id) {
+      document.querySelectorAll('.section').forEach(sec => sec.style.display = 'none');
+      document.getElementById(id).style.display = 'flex';
+    }
+
+    function startCelebrate() {
+      showSection('celebrate');
       for (let i = 0; i < 100; i++) {
-        let confetti = document.createElement("div");
-        confetti.classList.add("confetti");
-        confetti.style.left = Math.random() * 100 + "vw";
-        confetti.style.backgroundColor = "#" + Math.floor(Math.random()*16777215).toString(16);
-        confetti.style.animationDuration = 2 + Math.random() * 3 + "s";
+        let confetti = document.createElement('div');
+        confetti.classList.add('confetti');
+        confetti.style.left = Math.random() * 100 + 'vw';
+        confetti.style.backgroundColor = '#' + Math.floor(Math.random()*16777215).toString(16);
+        confetti.style.animationDuration = 2 + Math.random() * 3 + 's';
         document.body.appendChild(confetti);
         setTimeout(() => confetti.remove(), 5000);
       }
+      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
     }
 
-    function cutCake() {
-      const cake = document.getElementById("cake");
-      cake.style.transform = "scale(1.1)";
+    function startCake() {
+      showSection('cake');
+      let cakeImg = document.getElementById('cake-img');
+      cakeImg.src = 'https://img.icons8.com/emoji/2x/birthday-cake.png';
       setTimeout(() => {
-        cake.style.transform = "scale(1)";
-      }, 300);
+        cakeImg.src = 'https://cdn.pixabay.com/photo/2017/01/10/19/05/cake-1961782_1280.png';
+        document.getElementById('birthdaySong').play();
+      }, 2000);
+      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
     }
 
-    function showGreeting() {
-      const box = document.getElementById("greetingBox");
-      box.style.display = "block";
+    function startGreeting() {
+      showSection('greeting');
+      document.getElementById('romanticMusic').play();
+      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
+    }
+
+    function flipCard(card) {
+      card.classList.toggle('flipped');
+    }
+
+    function goBack() {
+      document.getElementById('romanticMusic').pause();
+      document.getElementById('romanticMusic').currentTime = 0;
+      document.getElementById('birthdaySong').pause();
+      document.getElementById('birthdaySong').currentTime = 0;
+      showSection('home');
+      document.getElementById('backBtn').style.display = 'none';
     }
   </script>
 </body>
