--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       color: #e91e63;
     }
 
-    .button-group button, .back-btn {
+    .button-group button {
       padding: 12px 24px;
       margin: 10px;
       font-size: 16px;
@@ -43,7 +43,7 @@
       transition: background 0.3s;
     }
 
-    .button-group button:hover, .back-btn:hover {
+    .button-group button:hover {
       background-color: #e91e63;
     }
 
@@ -116,7 +116,7 @@
 
   <div id="celebrate" class="section"></div>
   <div id="cake" class="section">
-    <img src="https://cdn.pixabay.com/photo/2017/01/10/19/05/cake-1961782_1280.png" id="cake-img" class="cake-img"/>
+    <img src="https://img.icons8.com/emoji/2x/birthday-cake.png" id="cake-img" class="cake-img"/>
   </div>
 
   <div id="greeting" class="section">
@@ -130,8 +130,6 @@
     </div>
   </div>
 
-  <button class="back-btn" id="backBtn" style="display:none;" onclick="goBack()">🔙 Back</button>
-
   <audio id="romanticMusic" src="https://cdn.pixabay.com/download/audio/2023/03/22/audio_bfa5b924b5.mp3?filename=happy-birthday-to-you-piano-version-141120.mp3" loop></audio>
   <audio id="birthdaySong" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2f1f30930f.mp3?filename=happy-birthday-110354.mp3"></audio>
 
@@ -139,6 +137,14 @@
     function showSection(id) {
       document.querySelectorAll('.section').forEach(sec => sec.style.display = 'none');
       document.getElementById(id).style.display = 'flex';
+    }
+
+    function returnHome() {
+      document.getElementById('romanticMusic').pause();
+      document.getElementById('romanticMusic').currentTime = 0;
+      document.getElementById('birthdaySong').pause();
+      document.getElementById('birthdaySong').currentTime = 0;
+      showSection('home');
     }
 
     function startCelebrate() {
@@ -152,7 +158,7 @@
         document.body.appendChild(confetti);
         setTimeout(() => confetti.remove(), 5000);
       }
-      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
+      setTimeout(returnHome, 10000);
     }
 
     function startCake() {
@@ -163,26 +169,17 @@
         cakeImg.src = 'https://cdn.pixabay.com/photo/2017/01/10/19/05/cake-1961782_1280.png';
         document.getElementById('birthdaySong').play();
       }, 2000);
-      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
+      setTimeout(returnHome, 12000);
     }
 
     function startGreeting() {
       showSection('greeting');
       document.getElementById('romanticMusic').play();
-      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
+      setTimeout(returnHome, 15000);
     }
 
     function flipCard(card) {
       card.classList.toggle('flipped');
-    }
-
-    function goBack() {
-      document.getElementById('romanticMusic').pause();
-      document.getElementById('romanticMusic').currentTime = 0;
-      document.getElementById('birthdaySong').pause();
-      document.getElementById('birthdaySong').currentTime = 0;
-      showSection('home');
-      document.getElementById('backBtn').style.display = 'none';
     }
   </script>
 </body>
