--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       color: #e91e63;
     }
 
-    .button-group button {
+    .button-group button, .back-btn {
       padding: 12px 24px;
       margin: 10px;
       font-size: 16px;
@@ -43,12 +43,13 @@
       transition: background 0.3s;
     }
 
-    .button-group button:hover {
+    .button-group button:hover, .back-btn:hover {
       background-color: #e91e63;
     }
 
     .cake-img {
       width: 250px;
+      cursor: pointer;
     }
 
     .confetti {
@@ -116,7 +117,7 @@
 
   <div id="celebrate" class="section"></div>
   <div id="cake" class="section">
-    <img src="https://img.icons8.com/emoji/2x/birthday-cake.png" id="cake-img" class="cake-img"/>
+    <img src="https://img.icons8.com/emoji/2x/birthday-cake.png" id="cake-img" class="cake-img" onclick="playCakeSong()"/>
   </div>
 
   <div id="greeting" class="section">
@@ -130,6 +131,8 @@
     </div>
   </div>
 
+  <button class="back-btn" id="backBtn" style="display:none;" onclick="goBack()">🔙 Back</button>
+
   <audio id="romanticMusic" src="https://cdn.pixabay.com/download/audio/2023/03/22/audio_bfa5b924b5.mp3?filename=happy-birthday-to-you-piano-version-141120.mp3" loop></audio>
   <audio id="birthdaySong" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2f1f30930f.mp3?filename=happy-birthday-110354.mp3"></audio>
 
@@ -137,14 +140,6 @@
     function showSection(id) {
       document.querySelectorAll('.section').forEach(sec => sec.style.display = 'none');
       document.getElementById(id).style.display = 'flex';
-    }
-
-    function returnHome() {
-      document.getElementById('romanticMusic').pause();
-      document.getElementById('romanticMusic').currentTime = 0;
-      document.getElementById('birthdaySong').pause();
-      document.getElementById('birthdaySong').currentTime = 0;
-      showSection('home');
     }
 
     function startCelebrate() {
@@ -158,29 +153,50 @@
         document.body.appendChild(confetti);
         setTimeout(() => confetti.remove(), 5000);
       }
-      setTimeout(returnHome, 10000);
+      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
     }
 
     function startCake() {
       showSection('cake');
-      let cakeImg = document.getElementById('cake-img');
-      cakeImg.src = 'https://img.icons8.com/emoji/2x/birthday-cake.png';
-      setTimeout(() => {
-        cakeImg.src = 'https://cdn.pixabay.com/photo/2017/01/10/19/05/cake-1961782_1280.png';
-        document.getElementById('birthdaySong').play();
-      }, 2000);
-      setTimeout(returnHome, 12000);
+      document.getElementById('cake-img').src = "https://img.icons8.com/emoji/2x/birthday-cake.png";
+      document.getElementById('birthdaySong').pause();
+      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
+    }
+
+    function playCakeSong() {
+      const audio = document.getElementById('birthdaySong');
+      audio.currentTime = 0;
+      audio.play();
+      // Simulate candle blow by changing cake image
+      const cake = document.getElementById('cake-img');
+      cake.src = "https://cdn.pixabay.com/photo/2017/01/10/19/05/cake-1961782_1280.png";
     }
 
     function startGreeting() {
       showSection('greeting');
-      document.getElementById('romanticMusic').play();
-      setTimeout(returnHome, 15000);
+      const music = document.getElementById('romanticMusic');
+      music.currentTime = 0;
+      music.play();
+      setTimeout(() => document.getElementById('backBtn').style.display = 'block', 10000);
     }
 
     function flipCard(card) {
       card.classList.toggle('flipped');
     }
+
+    function goBack() {
+      document.getElementById('romanticMusic').pause();
+      document.getElementById('birthdaySong').pause();
+      document.getElementById('romanticMusic').currentTime = 0;
+      document.getElementById('birthdaySong').currentTime = 0;
+      showSection('home');
+      document.getElementById('backBtn').style.display = 'none';
+    }
+
+    // Start with Home visible
+    window.onload = () => {
+      showSection('home');
+    };
   </script>
 </body>
 </html>
