--- a/index.html
+++ b/index.html
@@ -3,137 +3,161 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Birthday Urvashi</title>
+  <title>Happy Birthday Urvashi 🎉</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fff0f5;
-      text-align: center;
       margin: 0;
       padding: 0;
-      background-size: cover;
-      background-repeat: no-repeat;
-      transition: background-image 1s ease;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #fff0f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      overflow: hidden;
     }
     h1 {
-      color: #d63384;
+      font-size: 2.5rem;
+      color: #ff1493;
+      text-align: center;
       margin-top: 20px;
     }
-    .button-container {
-      margin-top: 40px;
+    .btn-container {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
     button {
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 30px;
       background-color: #ff69b4;
       color: white;
-      border: none;
-      padding: 15px 30px;
-      margin: 10px;
-      font-size: 18px;
-      border-radius: 10px;
       cursor: pointer;
+      transition: 0.3s;
     }
-    #cake-img {
+    button:hover {
+      background-color: #ff1493;
+    }
+    #animation, #cake, #greeting {
       display: none;
+      margin-top: 40px;
+      text-align: center;
+    }
+    #cake img {
       width: 300px;
-      margin-top: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
     #greeting-card {
-      display: none;
-      width: 400px;
-      margin: 30px auto;
       background-color: #fff;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      max-width: 500px;
+      margin: 0 auto;
+      position: relative;
     }
-    .back-btn {
+    .hearts {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: url('https://i.ibb.co/gM3DnKg/heart-bg.gif') repeat;
+      background-size: cover;
+      opacity: 0.3;
+      z-index: -1;
+    }
+    #back-btn {
       display: none;
-      margin-top: 20px;
-      background-color: #6f42c1;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>🎉 Happy Birthday Urvashi! 🎂</h1>
-  <div class="button-container" id="main-buttons">
-    <button onclick="startCelebration()">Celebrate Your Birthday</button>
-    <button onclick="cutCake()">Cut Your Cake</button>
-    <button onclick="showGreeting()">Open Greeting</button>
+  <h1>Happy Birthday Urvashi! 🎂</h1>
+
+  <div class="btn-container">
+    <button onclick="celebrate()">Celebrate Your Birthday 🎉</button>
+    <button onclick="cutCake()">Cut Your Cake 🎂</button>
+    <button onclick="showGreeting()">Open Your Greeting 💌</button>
   </div>
 
-  <img src="https://cdn.pixabay.com/photo/2016/11/18/15/46/birthday-1835443_1280.jpg" id="cake-img" onclick="playCakeSong()" alt="Birthday Cake" />
-
-  <div id="greeting-card">
-    <img src="https://img.icons8.com/emoji/2x/panda-emoji.png" width="80"/>
-    <p><strong>Happy Birthday Urvashi! 🎂 I love you sooo much ❤️<br>May your day be full of smiles, love, and all the cake you can eat!</strong></p>
+  <div id="animation">
+    <img src="https://i.ibb.co/gwK6KzF/party.gif" alt="celebration" width="300" />
   </div>
 
-  <button class="back-btn" id="back-btn" onclick="goBack()">🔙 Back</button>
+  <div id="cake">
+    <img id="cake-img" src="https://cdn.pixabay.com/photo/2016/11/18/15/46/birthday-1835443_1280.jpg" alt="cake" onclick="blowCandles()" />
+  </div>
 
-  <audio id="cake-song">
-    <source src="https://cdn.pixabay.com/download/audio/2023/03/22/audio_bfa5b924b5.mp3" type="audio/mpeg">
-  </audio>
+  <div id="greeting">
+    <div id="greeting-card">
+      <div class="hearts"></div>
+      <p><strong>Happy Birthday Urvashi! 🎂</strong></p>
+      <p>I love you sooo much ❤️</p>
+      <p>May your day be full of smiles, laughter, and all the cake you can eat! 🎉</p>
+      <p>You're not just special… you're my everything 💫</p>
+      <p>With every heartbeat, I fall for you even more 💖</p>
+      <p>You make my world brighter, my heart lighter, and my life so much better 💕</p>
+      <p>On your birthday, I just want to remind you…<br>
+         No matter how far we are, you're always with me — in every thought, every dream, every moment 🌙✨</p>
+      <p>This day is all about <em>you</em>... but honestly, every day is yours in my heart 💌</p>
+      <p><strong>Forever yours, <br>Ayush 💍</strong></p>
+    </div>
+  </div>
 
-  <audio id="greeting-song">
-    <source src="https://cdn.pixabay.com/download/audio/2023/03/22/audio_bfa5b924b5.mp3" type="audio/mpeg">
-  </audio>
+  <button id="back-btn" onclick="goBack()">🔙 Back</button>
+
+  <audio id="song" src="https://cdn.pixabay.com/download/audio/2023/03/22/audio_bfa5b924b5.mp3" preload="auto"></audio>
 
   <script>
-    function startCelebration() {
-      document.getElementById('main-buttons').style.display = 'none';
+    function celebrate() {
+      hideAll();
+      document.getElementById('animation').style.display = 'block';
       setTimeout(() => {
-        document.body.style.backgroundImage = "url('https://media.giphy.com/media/3o6ZsYm5bR6Dq3aFLq/giphy.gif')";
-        document.getElementById('back-btn').style.display = 'block';
-      }, 500);
-
-      setTimeout(() => {
-        document.body.style.backgroundImage = "none";
-      }, 10000);
+        document.getElementById('back-btn').style.display = 'inline-block';
+      }, 5000);
     }
 
     function cutCake() {
-      document.getElementById('main-buttons').style.display = 'none';
-      document.getElementById('cake-img').style.display = 'block';
-      document.getElementById('back-btn').style.display = 'block';
-      playCakeSong();
+      hideAll();
+      document.getElementById('cake').style.display = 'block';
+      document.getElementById('cake-img').style.opacity = 1;
     }
 
-    function showGreeting() {
-      document.getElementById('main-buttons').style.display = 'none';
-      document.getElementById('greeting-card').style.display = 'block';
-      document.getElementById('back-btn').style.display = 'block';
-      playGreetingSong();
-    }
-
-    function playCakeSong() {
-      const audio = document.getElementById("cake-song");
-      audio.play();
+    function blowCandles() {
+      document.getElementById('song').play();
+      document.getElementById('cake-img').style.opacity = 0.5;
       setTimeout(() => {
-        audio.pause();
-        audio.currentTime = 0;
+        document.getElementById('back-btn').style.display = 'inline-block';
       }, 10000);
     }
 
-    function playGreetingSong() {
-      const audio = document.getElementById("greeting-song");
-      audio.play();
+    function showGreeting() {
+      hideAll();
+      document.getElementById('greeting').style.display = 'block';
+      document.getElementById('song').play();
+      setTimeout(() => {
+        document.getElementById('back-btn').style.display = 'inline-block';
+      }, 10000);
     }
 
     function goBack() {
-      document.body.style.backgroundImage = "none";
-      document.getElementById('main-buttons').style.display = 'block';
-      document.getElementById('cake-img').style.display = 'none';
-      document.getElementById('greeting-card').style.display = 'none';
+      hideAll();
+      document.querySelector('.btn-container').style.display = 'flex';
       document.getElementById('back-btn').style.display = 'none';
+    }
 
-      const cakeAudio = document.getElementById("cake-song");
-      const greetingAudio = document.getElementById("greeting-song");
-      cakeAudio.pause();
-      cakeAudio.currentTime = 0;
-      greetingAudio.pause();
-      greetingAudio.currentTime = 0;
+    function hideAll() {
+      document.getElementById('animation').style.display = 'none';
+      document.getElementById('cake').style.display = 'none';
+      document.getElementById('greeting').style.display = 'none';
+      document.querySelector('.btn-container').style.display = 'none';
+      document.getElementById('song').pause();
+      document.getElementById('song').currentTime = 0;
     }
   </script>
 </body>
